// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VProgressLinear.js should render component and match snapshot 1`] = `

<div class="progress-linear"
     style="height: 7px;"
>
  <div class="progress-linear__background primary"
       style="height: auto; opacity: 0.3; width: 100%;"
  >
  </div>
  <div class="progress-linear__bar">
    <!---->
    <div class="progress-linear__bar__determinate primary"
         style="width: 33%;"
    >
    </div>
  </div>
</div>

`;

exports[`VProgressLinear.js should render component with buffer value and match snapshot 1`] = `

<div class="progress-linear"
     style="height: 7px;"
>
  <div class="progress-linear__background primary"
       style="height: auto; opacity: 0.3; width: 80%;"
  >
  </div>
  <div class="progress-linear__bar"
       style="width: 80%;"
  >
    <!---->
    <div class="progress-linear__bar__determinate primary"
         style="width: 41.25%;"
    >
    </div>
  </div>
</div>

`;

exports[`VProgressLinear.js should render component with buffer value and value > buffer value and match snapshot 1`] = `

<div class="progress-linear"
     style="height: 7px;"
>
  <div class="progress-linear__background primary"
       style="height: auto; opacity: 0.3; width: 80%;"
  >
  </div>
  <div class="progress-linear__bar"
       style="width: 80%;"
  >
    <!---->
    <div class="progress-linear__bar__determinate primary"
         style="width: 112.5%;"
    >
    </div>
  </div>
</div>

`;

exports[`VProgressLinear.js should render component with color and background color and match snapshot 1`] = `

<div class="progress-linear"
     style="height: 7px;"
>
  <div class="progress-linear__background blue"
       style="height: auto; opacity: 1; width: 100%;"
  >
  </div>
  <div class="progress-linear__bar">
    <!---->
    <div class="progress-linear__bar__determinate orange"
         style="width: 33%;"
    >
    </div>
  </div>
</div>

`;

exports[`VProgressLinear.js should render component with color and background color and opacity and match snapshot 1`] = `

<div class="progress-linear"
     style="height: 7px;"
>
  <div class="progress-linear__background blue"
       style="height: auto; opacity: 0.5; width: 100%;"
  >
  </div>
  <div class="progress-linear__bar">
    <!---->
    <div class="progress-linear__bar__determinate orange"
         style="width: 33%;"
    >
    </div>
  </div>
</div>

`;

exports[`VProgressLinear.js should render component with color and background opacity and match snapshot 1`] = `

<div class="progress-linear"
     style="height: 7px;"
>
  <div class="progress-linear__background orange"
       style="height: auto; opacity: 0.5; width: 100%;"
  >
  </div>
  <div class="progress-linear__bar">
    <!---->
    <div class="progress-linear__bar__determinate orange"
         style="width: 33%;"
    >
    </div>
  </div>
</div>

`;

exports[`VProgressLinear.js should render component with color and match snapshot 1`] = `

<div class="progress-linear"
     style="height: 7px;"
>
  <div class="progress-linear__background orange"
       style="height: auto; opacity: 0.3; width: 100%;"
  >
  </div>
  <div class="progress-linear__bar">
    <!---->
    <div class="progress-linear__bar__determinate orange"
         style="width: 33%;"
    >
    </div>
  </div>
</div>

`;

exports[`VProgressLinear.js should render indeterminate progress and match snapshot 1`] = `

<div class="progress-linear"
     style="height: 7px;"
>
  <div class="progress-linear__background primary"
       style="height: auto; opacity: 0.3; width: 100%;"
  >
  </div>
  <div class="progress-linear__bar">
    <div class="progress-linear__bar__indeterminate progress-linear__bar__indeterminate--active">
      <div class="progress-linear__bar__indeterminate long primary">
      </div>
      <div class="progress-linear__bar__indeterminate short primary">
      </div>
    </div>
    <!---->
  </div>
</div>

`;

exports[`VProgressLinear.js should render indeterminate progress with query prop and match snapshot 1`] = `

<div class="progress-linear"
     style="height: 7px;"
>
  <div class="progress-linear__background primary"
       style="height: auto; opacity: 0.3; width: 100%;"
  >
  </div>
  <div class="progress-linear__bar">
    <div class="progress-linear__bar__indeterminate progress-linear__bar__indeterminate--active">
      <div class="progress-linear__bar__indeterminate long primary">
      </div>
      <div class="progress-linear__bar__indeterminate short primary">
      </div>
    </div>
    <!---->
  </div>
</div>

`;
